@startuml

title __REDIS's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.redis {
    class gr.ds.unipi.noda.api.redis.RedisConnectionFactory {
        + closeConnection()
        + closeConnections()
        + noSqlDbOperators()
        # getBaseAggregateOperatorFactory()
        # getBaseComparisonOperatorFactory()
        # getBaseGeoSpatialOperatorFactory()
        # getBaseGeoTemporalOperatorFactory()
        # getBaseGeoTextualOperatorFactory()
        # getBaseLogicalOperatorFactory()
        # getBaseSortOperatorFactory()
        # getBaseTextualOperatorFactory()
    }
  }
  

  namespace gr.ds.unipi.noda.api.redis {
    class gr.ds.unipi.noda.api.redis.RedisConnectionManager {
        {static} - INSTANCE : RedisConnectionManager
        + closeConnection()
        + closeConnections()
        - RedisConnectionManager()
    }
  }
  

  namespace gr.ds.unipi.noda.api.redis {
    class gr.ds.unipi.noda.api.redis.RedisConnector {
        + createConnection()
        + equals()
        + hashCode()
    }
  }
  

  namespace gr.ds.unipi.noda.api.redis {
    class gr.ds.unipi.noda.api.redis.RedisOperators {
        + aggregate()
        + avg()
        + count()
        + distinct()
        + filter()
        + groupBy()
        + limit()
        + max()
        + min()
        + printScreen()
        + project()
        + sort()
        + sum()
        + toDataframe()
        {static} ~ newRedisOperators()
        - RedisOperators()
    }
  }
  

  gr.ds.unipi.noda.api.redis.RedisConnectionFactory -up-|> gr.ds.unipi.noda.api.core.nosqldb.NoSqlConnectionFactory
  gr.ds.unipi.noda.api.redis.RedisConnectionManager -up-|> gr.ds.unipi.noda.api.core.nosqldb.NoSqlDbConnectionManager
  gr.ds.unipi.noda.api.redis.RedisConnector .up.|> gr.ds.unipi.noda.api.core.nosqldb.NoSqlDbConnector
  gr.ds.unipi.noda.api.redis.RedisOperators -up-|> gr.ds.unipi.noda.api.core.nosqldb.NoSqlDbOperators


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
